--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,7 @@
 <html>
 <head>
+    <script type="text/javascript" src="../libs/jquery/jquery.js"></script>
+    <script type="text/javascript" src="js/playground.js"></script>
 </head>
 
 <body>
